--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,6 @@
 * Make mattockfs_api_test.py into a complete test script of API and make it run without errors.
 * Code cleanup and (if needed) refactoring.
+* Look into packaging issues (pip?/apt?)
 * Refactor for distributed usage.
 * Optimize job picking by factoring out full fledged sorting.
 * Implement restore of state from journal at startup.
