--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,14 @@
-* Make mattockfs_api_test.py into a complete test script of API and make it run without errors.
+* Fix dual ROI issue with opportunistic hashing
+* Extended tests opportunistic hashing
+* Test for all jop picking strategies.
+* Unified logging facility.
+* Make test scripts output OK/FAIL for tests on (un)expected results.
+* Grow top on oob grow of raw data file (distributed usage)
+* Refactor sorting to picking.
+* Restore state from journal
 * Code cleanup and (if needed) refactoring.
+* Release first beta
 * Look into packaging issues (pip?/apt?)
-* Refactor for distributed usage.
-* Optimize job picking by factoring out full fledged sorting.
-* Implement restore of state from journal at startup.
 * Port the base API to C++
 * Port the base API to Perl
 * Port the base API to NodeJs
