--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,10 @@
 TODO for first beta:
-* Extend tests for opportunistic hashing scenarios.
-* Extend tests for job picking strategies.
+* Use longpathmap in walkthrough test (longpathmap 60%)
+* Poison hash tesy in walktrough test (opportunistic_hash 73%)
+* Extend tests for job picking strategies (refcount_stack 56%)
+* Add test for just out of range carvpath (repository 68%)
 * Make test scripts output OK/FAIL for tests on (un)expected results 
     (instead of text strings that only Rob knows how to parse for success)
-* Check code-coverage of tests.
 * Code cleanup.
 * Allign text on website with the OCFA naming sceme to Actor-model naming sceme.
 
